# sitemap

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
pelican/plugins/sitemap/: __init__.py  sitemap.py  test_sitemap.py
pelican/plugins/sitemap/test_data/: article1.md  article2.md
test/: test_sitemap.py
